--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-playlists",
   "version": "0.1.0",
-  "repository": "git@github.com:pyigyli/youtube-playlists",
+  "repository": "git@github.com:pyigyli/youtube-playlists.git",
   "author": "Pyigyli",
   "private": true,
   "dependencies": {
