--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
   "name": "youtube-playlists",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "repository": "git@github.com:pyigyli/youtube-playlists.git",
   "author": "Pyigyli",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "firebase": "^5.8.5",
-    "lodash": "^4.17.11",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-redux": "5.1.1",
-    "react-redux-firebase": "^2.2.6",
-    "react-scripts": "2.1.5",
-    "redux": "^4.0.1",
-    "redux-firestore": "^0.7.0",
-    "redux-thunk": "^2.3.0",
+    "bcryptjs": "^2.4.3",
+    "firebase": "^5.11.1",
+    "jsonwebtoken": "^8.5.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "youtube-v3-api": "^1.1.1"
   },
   "scripts": {
@@ -33,5 +28,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "react-scripts": "2.1.5"
+  }
 }
