--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# My files and folders
-/.firebase
-/src/database/apiConfig.js
-.firebaserc
+.firebase
